--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
     <title>Add New User</title>
 </head>
+
 <body>
 <div th:replace="parts/header :: content"></div>
 <div th:if="${param.error}">
@@ -15,51 +18,54 @@
     You have been logged out.
 </div>
 
-<h1 class="top-h1">New User</h1>
+<!--<div th:fragment="addUser">-->
 
-<div class="container-form">
-    <form th:action="@{/saveUser}" th:object="${edit_user}" method="post">
+    <h1 class="top-h1">New User</h1>
 
-        <input type="hidden" th:field="*{id}"/>
-        <div class="error-message" th:if="${user_message}">
-            <p th:text="${user_message}"></p>
-        </div>
+    <div class="container-form">
+        <form th:action="@{/admin/saveUser}" th:object="${edit_user}" method="post">
 
-        <label for="username">Login:</label>
-        <input type="text" id="username" th:field="*{username}" th:required="true">
-        <br><br>
-        <label for="name">Name:</label>
-        <input type="text" id="name" th:field="*{name}" th:required="true">
-        <div class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
-
-        <label for="surname">Surname:</label>
-        <input type="text" id="surname" th:field="*{surname}" th:required="true">
-        <div class="error-message" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Name Error</div>
-        <br><br>
-
-        <label for="age">You age:</label>
-        <input type="number" id="age" th:field="*{age}" th:required="true">
-        <div class="error-message" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name Error</div>
-        <br><br>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" th:field="*{password}" th:required="true">
-
-        <fieldset class="roles">
-            <legend class="col-4 col-form-label">Roles:</legend>
-            <div class="col-8">
-                <th:block th:each="role: ${allRoles}">
-                    <input type="checkbox" th:field="*{roles}"
-                           th:text="${role.roleName}" th:value="${role.id}" class="m-2"/>
-                </th:block>
+            <input type="hidden" th:field="*{id}"/>
+            <div class="error-message" th:if="${user_message}">
+                <p th:text="${user_message}"></p>
             </div>
-        </fieldset>
 
-        <div class="button-container">
-            <img class="img_gif" src="/img/save.gif" alt="#">
-            <button type="submit">Save</button>
-        </div>
-    </form>
-</div>
+            <label for="username">Login:</label>
+            <input type="text" id="username" th:field="*{username}" th:required="true">
+            <br><br>
+            <label for="name">Name:</label>
+            <input type="text" id="name" th:field="*{name}" th:required="true">
+            <div class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
+
+            <label for="surname">Surname:</label>
+            <input type="text" id="surname" th:field="*{surname}" th:required="true">
+            <div class="error-message" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Name Error</div>
+            <br><br>
+
+            <label for="age">You age:</label>
+            <input type="number" id="age" th:field="*{age}" th:required="true">
+            <div class="error-message" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Name Error</div>
+            <br><br>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" th:field="*{password}" th:required="true">
+
+            <fieldset class="roles">
+                <legend class="col-4 col-form-label">Roles:</legend>
+                <div class="col-8">
+                    <th:block th:each="role: ${allRoles}">
+                        <input type="checkbox" th:field="*{roles}"
+                               th:text="${role.roleName}" th:value="${role.id}" class="m-2"/>
+                    </th:block>
+                </div>
+            </fieldset>
+
+            <div class="button-container">
+                <img class="img_gif" src="/img/save.gif" alt="#">
+                <button type="submit">Save</button>
+            </div>
+        </form>
+    </div>
+<!--</div>-->
 </body>
 </html>
